<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TLFragments.CancelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Cancelation Reason"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:alpha="0.5"
            android:background="@color/colorRemaining" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:onClick="hired_btn"
                    android:text="@string/hired" />

                <RadioButton
                    android:id="@+id/radio_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:onClick="concerned_btn"
                    android:text="@string/service" />

                <RadioButton
                    android:id="@+id/radio_btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:onClick="service_btn"
                    android:text="@string/service_not" />

                <RadioButton
                    android:id="@+id/radio_btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:onClick="society_btn"
                    android:text="@string/society" />

                <RadioButton
                    android:id="@+id/radio_btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:onClick="professional_btn"
                    android:text="@string/professional" />

                <RadioButton
                    android:id="@+id/radio_btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:onClick="placed_btn"
                    android:text="@string/placed" />

                <RadioButton
                    android:id="@+id/radio_btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:onClick="others_btn"
                    android:paddingStart="10dp"
                    android:text="@string/others" />


            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/login_btn_bg"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="10dp"
            android:onClick="cancel_reason"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="Cancel"/>


    </LinearLayout>
</FrameLayout>