<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TLFragments.Ftab1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txt_booking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Booking Details"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_booking"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorRemaining" />

        <TextView
            android:id="@+id/service_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="12dp"
            android:paddingStart="10dp"
            android:text="Service Location"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/timing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="12dp"
            android:paddingStart="10dp"
            android:text="Timings"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/time_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_wallet"
            android:drawablePadding="12dp"
            android:paddingStart="10dp"
            android:text="Payment History"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/payment_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="5dp"
            android:text="No payment history" />

        <View
            android:id="@+id/view_details2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorRemaining" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Payment Summary"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:alpha="0.5"
            android:background="@color/colorRemaining" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="100">

            <TextView
                android:id="@+id/fan_installment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Fan Installment"
                android:layout_weight="90"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rupee_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="10dp"
                android:text="₹ 349"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="100">

            <TextView
                android:id="@+id/safety_fee_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="90"
                android:text="Safety and Support fee"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/safety_fees_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="10dp"
                android:text="₹ 49"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/safety" />


        </LinearLayout>

        <View
            android:id="@+id/view_details3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:alpha="0.5"
            android:background="@color/colorRemaining" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="100">

            <TextView
                android:id="@+id/amount_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="80"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Total Amount :"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/total_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="30dp"
                android:text="₹ 398"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>